syntax = "proto3";

package minitoolstream;

option go_package = "github.com/your-org/minitoolstream/gen/go;minitoolstream";

service IngressService {
  rpc Publish(PublishRequest) returns (PublishResponse);
}

message PublishRequest {
  string subject = 1;
  bytes data = 2;
  map<string, string> headers = 3;
}

message PublishResponse {
  uint64 sequence = 1;
  int64 StatusCode = 2;
  string ResponderError = 3;
}
